[package]
name = "bench-hll"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ahash = "0.8.12"
rapidhash = "4.2.2"

rand = "0.8"
rayon = "1.10.0"

amadeus-streaming = "=0.4.3"
cardinality-estimator = "1.0.2"
hyperloglog = "1.0.2"
hyperloglogplus = {version = "0.4.1", features = ["const-loop"]} 
probabilistic-collections = "0.7.0"
hyperloglockless = { path = "../hyperloglockless" }

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "bench"
harness = false